# youtube-exercise-summary

./: .gitignore  CONTRIBUTING.md  README.md  main.py  pyproject.toml  schemas.py
docs/: iteration-notes.md
pipeline/: __init__.py  download.py  extract.py  frames.py  render.py  transcribe.py  vision.py
pipeline/templates/: summary.html.j2
scripts/: rapidocr_batch.py
tests/: test_extract.py  test_frames.py  test_main.py  test_render.py  test_vision.py
